<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">✶ Lua ॐ Negra ✶</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="nav_header_title" translatable="false"> ✶ Lua ॐ Negra ✶ </string>
    <string name="nav_header_subtitle" translatable="false">Keep it Up ¯\\_(ツ)_/¯</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="escreve_numero_telemovel"> Número de telemóvel </string>
    <string name="notifica_es"> Notificações </string>
    <string name="memes" translatable="false"> Memes </string>
    <string name="sala_de_admins"> Sala de Admins </string>
    <string name="app_log" translatable="false"> App Log </string>
    <string name="bloquear_utilizador"> Bloquear Utilizador </string>
    <string name="blank" translatable="false">" "</string>
    <string name="fundo_da_mensagem_do_destinatario"> Fundo da mensagem do destinatario </string>
    <string name="fundo_da_mensagem_de_remetente"> Fundo da mensagem de remetente </string>
    <string name="fundo_da_barra_de_mensagens"> Fundo da barra de mensagens </string>
    <string name="texto_da_data_hora_utilizador"> Texto da Data | Hora | Utilizador </string>
    <string name="fundo_da_sala"> Fundo da sala </string>
    <string name="texto"> Texto </string>
    <string name="barra_das_op_es"> Barra das opções </string>
    <string name="barra_superior"> Barra superior </string>
    <string name="update"> Atualizar </string>
    <string name="eliminar_sala"> Eliminar sala </string>
    <string name="transferir_sala"> Transferir sala </string>
    <string name="cores"> Cores </string>
    <string name="bloquear_utilizadores"> Bloquear Utilizadores </string>
    <string name="pedidos_de_acesso"> Pedidos de acesso </string>
    <string name="lista_de_admins"> Lista de Admins </string>
    <string name="defeni_es"> Defenições </string>
    <string name="info" translatable="false">Info</string>
    <string name="contactos"> Contactos </string>
    <string name="app_version" translatable="false">App version:</string>
    <string name="termos_de_utiliza_o_e_condi_es"> Termos de utilização e condições </string>
    <string name="pedir_ao_developer_uma_funcionalidade"> Pedir ao developer uma funcionalidade </string>
    <string name="login">Sign in</string>
    <string name="ao_fazer_login_concorda_com_os_termos_de_utiliza_o_n_clique_aqui_para_ler"> Ao fazer LogIn concorda com os termos de utilização\n( clique aqui para ler )</string>
    <string name="codigo">Código</string>
    <string name="adicionar"> Adicionar </string>
    <string name="preview">Carregar</string>
    <string name="adicionar_meme"> Adicionar meme </string>
    <string name="cola_aqui_o_link_do_meme">Cola aqui o link do meme…</string>
    <string name="escrever">Escrever…</string>
    <string name="lua_negra" translatable="false">✶ Lua ॐ Negra ✶</string>
    <string name="enviar_mensagem_motivacional"> Enviar mensagem motivacional </string>
    <string name="notificar_novo_update"> Notificar novo UpDate </string>
    <string name="enviar_notifica_o_broadcast"> Enviar notificação BroadCast </string>
    <string name="notifica_o_broadcast"> Notificação BroadCast </string>
    <string name="escreve_aqui_a_notifica_o_broadcast">Escreve aqui a notificação BroadCast…</string>
    <string name="criar"> Criar </string>
    <string name="username">Nome</string>
    <string name="update2"> Actualização </string>
    <string name="tomei_conhecimento"> Tomei conhecimento </string>
    <string name="partilhar_nas_mensagens"> Partilhar nas mensagens </string>
    <string name="partilhar_nas_salas"> Partilhar nas salas públicas </string>
    <string name="partilhar_em_hall_of_fame"> Partilhar em Hall Of Fame </string>
    <string name="bem_vindo_comunidade">Bem vindo á comunidade</string>
    <string name="let_the_games_begin" translatable="false">Let the games begin…</string>
    <string name="mic">Microfone</string>
    <string name="alta_voz"> Alta-Voz </string>
    <string name="mensagens">Mensagens</string>
    <string name="salas_privadas">Salas temáticas</string>
    <string name="comunidade">Comunidade</string>
    <string name="hall_of_fame">Mural</string>
    <string name="youtube">YouTube</string>
    <string name="defini_es"> Definições </string>
    <string name="admins">Admins</string>
    <string name="perfil">Perfil</string>
    <string name="criar_sala_privada">Criar sala temática</string>
    <string name="partilhar_app">Partilhar App</string>
    <string name="logout">LogOut</string>
    <string name="Verificar">Verificar o código</string>
    <string name="Invalido">Número Invalido</string>
    <string name="logo_sala"> Logo da sala </string>
    <string name="ligar"> Ligar </string>
    <string name="iniciar_call"> Iniciar Call </string>
    <string name="terminar_call"> Terminar Call </string>
    <string name="tipo_multimedia">Que tipo de multimédia?</string>
    <string name="enviar_notificacao"> Enviar notificação </string>
    <string name="aindanaotensmensagens"> Ainda não tens mensagens </string>
    <string name="aceitar"> Aceitar </string>
    <string name="mensagens_guardadas">Mensagens guardadas</string>
    <string name="eliminar_conta"> Eliminar conta </string>
    <string name="pedir_funcionalidade"> Pedir funcionalidade </string>
    <string name="descrevefuncionalidade">Descreve aqui a funcionalidade que pretendes…</string>
    <string name="cancelar"> Cancelar </string>
    <string name="pedir"> Pedir </string>
    <string name="pedidoenviado"> Pedido enviado, Obrigado  </string>
    <string name="termos_utilizacao"> Termos de utilização </string>
    <string name="confirma_o_para_sair_da_app"> Confirmação para sair da app </string>
    <string name="nomemeutilizacao"> Nome já em utilização </string>
    <string name="perfilatualizado"> Perfil atualizado com sucesso! </string>
    <string name="necessarioumnick"> Lógico que é necessário um nome… </string>
    <string name="todaainformacaoseraapagada"> Toda a tua informação será apagada não sendo possível voltar a recuperar. </string>
    <string name="tensqueteracerteza">Tens que ter a certeza!</string>
    <string name="apagrconta"> Apagar conta </string>
    <string name="confirmacaosairappativada"> Confirmação para sair da app ativada </string>
    <string name="confirmacaosairappdesativada"> Confirmação para sair da app desativada </string>
    <string name="notificacoesativas"> Notificações ativadas </string>
    <string name="notificacoesdesativas"> Notificações desativadas </string>
    <string name="perfilsubmenu"> Perfil </string>
    <string name="atualizaoperfil">Atualiza o perfil</string>
    <string name="administraradmins"> Administar Admins </string>
    <string name="bloqearutilizadoressubtitulo"> Bloquear utilizador </string>
    <string name="personalizarsalaprivada"> Personalizar sala temática </string>
    <string name="escolheacor"> Escolhe a cor </string>
    <string name="gravar"> Gravar </string>
    <string name="cancelarcores"> Cancelar </string>
    <string name="coralterada"> Cor alterada </string>
    <string name="ultimavezonline">Última vez online:</string>
    <string name="defenicoesalaprivada"> Defenições da sala temática </string>
    <string name="apagarsalaprivada"> Apagar sala temática </string>
    <string name="aoeliminarsala">Ao eliminares esta sala, não será possivel voltar a recuperar!</string>
    <string name="tensdeteracertezaeliminarsala">Tens a certeza que o pretendes fazer?</string>
    <string name="nempensar"> Nem pensar </string>
    <string name="yap"> Sim </string>
    <string name="defenicoessalaprivada"> Defenições da sala </string>
    <string name="email_geral_luanegra_gmail_com" translatable="false"> geral.luanegra@gmail.com</string>
    <string name="aplica_o_desenvolvida_de_raiz_com_o_prop_sito_de_servir_as_necessidades_da_comunidade_lua_negra">Aplicação desenvolvida de raiz com o propósito de servir as necessidades da comunidade  ✶ Lua ॐ Negra ✶ </string>
    <string name="novoupdate"> Nova atualização </string>
    <string name="maistrade"> Mais tarde </string>
    <string name="fecharapp"> Fechar </string>
    <string name="fostebloqueadoem5salas"> Foste bloqueado em 5 salas temáticas </string>
    <string name="toleranciazerotrols"> Tolerância zero a trolls </string>
    <string name="fostebloqueado5advertencias"> Foste bloqueado por 5 advertências </string>
    <string name="fecharappbtn"> Fechar </string>
    <string name="queresmesmofecharaapp">Queres mesmo fechar a aplicação?</string>
    <string name="queresmesmofazerlogout">Queres mesmo fazer LogOut?</string>
    <string name="novomenbro"> Novo membro </string>
    <string name="bemvindoaluanegra">Bem Vindo á comunidade ✶ Lua ॐ Negra ✶</string>
    <string name="escreveaquioteunome"> Escreve aqui o teu nome </string>
    <string name="bemvindo"> Bem Vindo </string>
    <string name="aproveitaestadia"> Aproveita a estadia </string>
    <string name="novouserregistado"> Novo utilizador registado, dá-lhe as boas vindas </string>
    <string name="vemdescobriraluanegra">Vem descobrir a comunidade  ✶ Lua ॐ Negra ✶ </string>
    <string name="fazdownloadaqui">Faz download aqui:</string>
    <string name="partilharapp"> Partilhar aplicação </string>
    <string name="criarnovasalaprivada"> Criar nova sala temática </string>
    <string name="escreveonomedasala">Escreve o nome da sala…</string>
    <string name="enecessarioumaimagem"> É necessário uma imagem para a sala. </string>
    <string name="acarregarmemes"> A carregar memes… \n O tempo depende da velocidade da tua net </string>
    <string name="memeadicionadocomsucesso"> Meme adicionado com sucesso </string>
    <string name="micdesligado"> Mic desligado </string>
    <string name="micligado"> Mic ligado </string>
    <string name="speakerdesligado"> Alta-voz desligado </string>
    <string name="speakerligado"> Alta-voz ligado </string>
    <string name="saidacall">Sai da chamada da sala - %s</string>
    <string name="entreinacall">Acabei de entrar na chamada da sala - %s</string>
    <string name="acordaenvieiteumasms"> Acorda pah, enviei-te uma mensagem </string>
    <string name="notificacaoenviada"> Notificação enviada </string>
    <string name="ficheiroenviado"> Ficheiro enviado </string>
    <string name="notifiicacoesadmin"> Notificações - Admin </string>
    <string name="mensagemmotivacionalenviada"> Mensagem motivacional enviada </string>
    <string name="notificarnovoupdate"> Notificar nova actualização </string>
    <string name="changelogaqui">Changelog aqui…</string>
    <string name="linkdownloadaqui">Link download aqui…</string>
    <string name="versaodoupdate">Versão da actualização aqui…</string>
    <string name="notificar"> Notificar </string>
    <string name="novoupdatedisponivel"> Novo Update disponível! \n Não te esquecas de actualizar para disfrutar de todas as novidades. </string>
    <string name="notificacaoactualizacao"> Notificação de atualização enviada. </string>
    <string name="faltalinkdownload"> Falta o link de download </string>
    <string name="faltaversaoupdate"> Falta a versão do Update </string>
    <string name="apagar"> Apagar  </string>
    <string name="reportar_sala">Reportar sala</string>
    <string name="sair_da_sala">Sair da sala</string>
    <string name="deixar_de_ser_admin">Deixar de ser administrador</string>
    <string name="adicionar_aos_favoritos">Favoritos</string>
    <string name="chamadas">Chamadas</string>
    <string name="enviar_notifica_o">Enviar notificação</string>
    <string name="enviar_multim_dia">Enviar multimédia</string>
    <string name="enviar_meme">Enviar meme</string>
    <string name="enviar_chave_de_encripta_o">Enviar chave de encriptação</string>
    <string name="home">Home</string>
</resources>