<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/defenicoessala"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="@string/blank">
        <menu>
            <item android:id="@+id/option_mensagens_favoritos"
                android:icon="@drawable/ic_like"
                android:title="@string/adicionar_aos_favoritos" />
            <item android:id="@+id/option_mensagens_chamadas"
                android:icon="@drawable/call"
                android:title="@string/chamadas" />
            <item android:id="@+id/option_mensagens_enviarNotificacao"
                android:icon="@drawable/toque"
                android:title="@string/enviar_notifica_o" />
            <item android:id="@+id/option_mensagens_enviarMultimedia"
                android:icon="@drawable/add_media"
                android:title="@string/enviar_multim_dia" />
            <item android:id="@+id/option_mensagens_enviarMeme"
                android:icon="@drawable/memes_icon"
                android:title="@string/enviar_meme" />
            <item android:id="@+id/option_mensagens_enviarChaveDesencriptacao"
                android:icon="@drawable/pedido_acesso"
                android:title="@string/enviar_chave_de_encripta_o" />
            <item android:id="@+id/option_mensagens_eliminartudo"
                android:icon="@drawable/delete"
                android:title="@string/apagar" />
        </menu>
    </item>
    <item
        android:title="@string/blank"
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>