<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.Admins.MemesAdminActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_activitys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_adicionar_meme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"


        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        app:iconTintMode="multiply"
        app:icon="@drawable/ok"
        android:elevation="16dp"
        android:padding="5dp"
        android:text="@string/adicionar"
        android:textAlignment="center"

        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_memepreview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_preview_meme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"


        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        app:iconTintMode="multiply"
        app:icon="@drawable/ic_preview"
        android:elevation="16dp"
        android:padding="5dp"
        android:text="@string/preview"
        android:textAlignment="center"

        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <ImageView
        android:id="@+id/img_memepreview"
        android:layout_width="0dp"
        android:layout_height="196dp"
        android:layout_margin="20dp"
        android:elevation="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_preview_meme"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/blank" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:elevation="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/adicionar_meme"

            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="16dp"
            android:hint="@string/cola_aqui_o_link_do_meme"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_meme_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                 />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>