<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/entrarCallGrupo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/call"
        android:padding="10dp"
        android:text="@string/ligar"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/micCallGrupo"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/mic"
        android:elevation="16dp"
        android:padding="10dp"
        android:text="@string/mic"
        android:textAlignment="center"
        android:textSize="14sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/speakerCallGrupo"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/speaker"
        android:elevation="16dp"
        android:padding="10dp"
        android:text="@string/alta_voz"
        android:textAlignment="center"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:elevation="16dp" />

    <com.lua.luanegra.tools.EmptyRecyclerView
        android:id="@+id/messageRecyclerView_Grupo_Call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:scrollbars="vertical"
        tools:itemCount="2"
        tools:listitem="@layout/item_message" />

</LinearLayout>